<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="centerInside" >
    </ImageView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="5dip"
        android:minHeight="5dip"
        android:visibility="invisible" >
    </ProgressBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loadSingle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_single_text"
            ></Button>

        <Button
            android:id="@+id/loadMulti1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/load_background_w_err_text"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loadMulti2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/load_background_text"
            />

        <Button
            android:id="@+id/loadAsync"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/load_async_text"
             />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/otherButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/show_toast_text"
        ></Button>

    <Button
        android:id="@+id/clear_button"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/clear_text" />

</LinearLayout>